# agentic-translation-qa

./: .env.example  .gitignore  README.md  pyproject.toml  report.md
app/: __init__.py  main.py
app/agents/: graph.py  nodes.py  state.py
app/api/: dependencies.py
app/api/routes/: benchmark.py  translation.py
app/core/: config.py  langsmith.py  logging.py
app/evaluation/: analyzer.py  metrics.py
app/models/: embedder.py  llm.py  translator.py
app/rag/: glossary_loader.py  retriever.py
app/schemas/: benchmark.py  translation.py
app/services/: agent_translation.py  baseline_translation.py  benchmark.py
data/datasets/: eval_set.json
data/glossaries/: legal_terms.json  medical_terms.json  tech_terms.json
notebooks/: 01_dataset_eda.ipynb
outputs/: domain_term_frequency.csv  selected_eval_set.csv  summary_stats.csv
scripts/: generate_eda_outputs.py
tests/: test_benchmark_api.py  test_metrics.py  test_nodes.py  test_retriever.py
